# GPSat

./: .gitignore  IS2_GPSat_train.py  IS2_SMAP_GPSat_train.py  MANIFEST.in  environment.yml  extra_funcs.py  optimize_hyperparameters.py  pyproject.toml  requirements.txt  run_IS2_GPSat_train.sh  run_IS2_GPSat_train_simple.sh  run_IS2_SMAP_GPSat_train.sh  submit_IS2_SMAP.sh  submit_gpsat.sh  submit_gpsat_gpu.sh  test_numerical_stability.py  test_smap_loading.py  train_gpsat_seasonal.py
GPSat/: dataloader.py  plot_utils.py  postprocessing.py
GPSat/models/multioutput/: __init__.py  gpr.py  likelihoods.py
IS2_SM_GP/: PERFORMANCE_OPTIMIZATIONS.md  README.md  cache_smap_data.py  check_expert_locations.py  combine_monthly_netcdf.py  nohup.out  run_IS2_SMAP_GPSat_train.py  run_days_in_month_IS2_SMAP.sbatch  run_month_IS2_SMAP_params.py  run_monthly_mid_daterange_IS2_SIC_TF_SD.sbatch  run_monthly_mid_daterange_IS2_SMAP.sbatch  smap_availability_20181001-20231231.csv  smap_availability_20210101-20211231.csv  smap_availability_20220101-20221231.csv  smap_availability_20230101-20231231.csv  smap_availability_20240101-20251231.csv
docs/: conf.py
gpu_stuff/: check_cuda_environment.sh  downgrade_tensorflow.sh  environment_is2_39_gp_manual.yml  install_tf_2.15.sh  is2_39_gp_packages.txt  salloc_gpsat_gpu.sh  setup_cuda_environment.sh  test_gpu.py
