[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "GPSat"
version = "0.0.1"
description = "Gaussian Process Satellite data processing"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Ronald MacEachern and So Takao"},
]
maintainers = [
    {name = "Ronald MacEachern and So Takao"},
]
keywords = ["gaussian processes", "satellite", "remote sensing", "geospatial"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "astropy>=5.1.1",
    "chardet>=4.0.0",
    "pandas==1.5.3",
    "tensorflow-probability<0.24.0",
    "gpytorch==1.10",
    "matplotlib>=3.6.2",
    "scipy>=1.9.3",
    "tables>=3.7.0",
    "netCDF4==1.6.2",
    "xarray>=2022.10.0",
    "gast>=0.4.0",
    "pyproj>=3.4.0",
    "seaborn>=0.11.2",
    "jupyter==1.0.0",
    "scikit-learn==1.2.2",
    "numba>=0.56.4",
    "pytest>=7.2.0",
    "dataclasses-json==0.5.7",
    "global-land-mask==1.0.0",
    "cartopy==0.22.0",
    "fastparquet>=2024.2.0",
    "pyarrow>=15.0.2",
]

[project.optional-dependencies]
# Documentation dependencies
docs = [
    "Sphinx>=5.0.2",
    "nbsphinx>=0.9.3",
    "numpydoc>=1.6.0",
    "sphinxemoji>=0.2.0",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-book-theme>=1.0.0",
    "sphinx-copybutton>=0.5.0",
    "sphinx-design>=0.5.0",
]

# Development dependencies
dev = [
    "pytest>=7.2.0",
    "black",
    "flake8",
    "mypy",
]

# Platform-specific TensorFlow dependencies
# Note: These need to be installed separately based on your platform
# Linux: pip install "tensorflow[and-cuda]>=2.14.0,<2.16.0"
# macOS Intel: pip install "tensorflow==2.14.0"
# macOS Apple Silicon: pip install "tensorflow-macos==2.12.0"
# Then install gpflow accordingly

[project.urls]
Homepage = "https://github.com/CPOMUCL/GPSat"
Documentation = "https://cpomucl.github.io/GPSat/"
Repository = "https://github.com/CPOMUCL/GPSat"
Issues = "https://github.com/CPOMUCL/GPSat/issues"

[tool.setuptools]
packages = ["GPSat"]

[tool.setuptools.package-data]
GPSat = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
